# DHT22-lib-for-esp-idf

./: .gitignore  CMakeLists.txt  README.md  idf_component.yml
examples/C/: CMakeLists.txt
examples/C/main/: CMakeLists.txt  main.c
examples/CPP/: CMakeLists.txt
examples/CPP/main/: CMakeLists.txt  main.cpp
fwtest/: CMakeLists.txt
fwtest/main/: CMakeLists.txt  fwtest.c
test/: CMakeLists.txt  sdkconfig  test_1.c
test/main/: CMakeLists.txt  test_build.c
